# spbu_2020_c_homeworks

./: .gitignore  1spiral.c  2moving.c  3substr.c  4simp.c  5max.c  CMakeLists.txt  spiral.c
1.1/: spiral.c
ComplexNumbers/: complexNumbers.c  complexNumbers.h
fix_test_1/: task_1.1.c  task_1.2.c
homework_1/: task_1.c  task_2.c
tasks/: 1.1spiral.c  1.2moving.c  1.3substr.c  1.4simp.c  1.5max.c  1spiral.c  2moving.c  3substr.c
tasks_2/: 2.1_decompose.c  2.2_bulls_and_cows.c  2.3_zeros.c  2.4_sorting.c  2.5_factorial.c
tasks_3/: 3.2_murders.c  test_list.c
tasks_4/: 4.1_postfix.c  4.2_double.c  4.3_binaries.c
tasks_5/: 5.1_testBST.c  5.2_testAVL.c
tasks_6/: 6_testHashTable.c  testFile.txt
tasks_7/: 7.1_students.c  7.2_cities.c  7.2_testFile.txt
tasks_8/: 8_lexer.c
test_1/: 1.1_sort.c  complex_number.c  complex_number.h
test_2/: 2.1_fibbonachi.c  2.2_dates.c  2.3_matrix.c  testFileDates.txt
test_final/: 1_numbers.c  2_points.c  3_dfa.c
